#916 -- Fix to shifting elements on mobile version of global header, after logo scroll

--- a/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/global-header.scss
+++ b/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/global-header.scss
@@ -50,6 +50,10 @@
       position: relative;
       height: 7.1875rem;
 
+      @include devicebreak(mediumonlytab) {
+        height: 4.6875rem;
+      }
+
       nav {
         @include devicebreak(mediumonlytab) {
           height: 4.6875rem;
